ErrorDispose/src/main/java/com/example/error/demo/Res.java
package com.example.error.demo;

public class Res {
    String name;

    public Res(String aa) {
        name = aa;
    }
}
